--- a/src/design/step1.fxml
+++ b/src/design/step1.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="503.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.151" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="vBoxStep1" alignment="TOP_CENTER" prefHeight="400.0" prefWidth="503.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.151" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Step1">
          <font>
@@ -31,6 +34,13 @@
             <ListView fx:id="listViewObjects" prefHeight="142.0" prefWidth="423.0" GridPane.rowIndex="1" />
          </children>
       </GridPane>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="5.0" VBox.vgrow="ALWAYS">
+         <children>
+            <Label text="Select a file" />
+            <TextField fx:id="fxTextFFileDir" HBox.hgrow="ALWAYS" />
+            <Button fx:id="fxBtnChooseFile" mnemonicParsing="false" text="Browse..." />
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
